--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <div class="container-navbar">
         <ul class="ul-navbar">
             <li class="li-navbar">
-              <a href="#">HOME</a>
+              <a href="#" class="a-navbar">HOME</a>
             </li>
             <li class="li-navbar">
-              <a href="about.html">ABOUT ME</a>
+              <a href="about.html" class="a-navbar">ABOUT ME</a>
             </li>
             <li class="li-navbar">
-              <a href="contact.html">CONTACT ME</a>
+              <a href="contact.html" class="a-navbar">CONTACT ME</a>
             </li>
         </ul>
     </div>
@@ -23,10 +23,10 @@
 
    <!-- CONTENT 1 -->
     <div class="container-content">
-        <img src="alma.jpeg" class="img-content"/>
-    </div>
-    <div class="container-content1">
+      <a href="https://www.instagram.com/alma.jichan/" class="a-content">
         <img src="ALMAA.jpeg" class="img-content1"/>
+        <p>FOLLOW MY INSTAGRAM!!</p>
+      </a>
     </div>
    <!-- CONTENT 1 END -->
 
