--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
    <!-- CONTENT 1 -->
     <div class="container-content">
       <a href="https://www.instagram.com/rahmataunillah/" class="a-content">
-        <img src="rahmet.JPG" class="img-content"/>
+        <img src="markicabs.png" class="img-content"/>
         <p>FOLLOW MY INSTAGRAM!!</p>
       </a>
     </div>
